First question answer

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -18,7 +18,7 @@ Where did you attend High School, and did you graduate? Compare english class to
   
 ### my answer     
   
-
+I attended highschool at Eastside High school and Eagle Rock highschool. Yes I did graduate. Comapring english and math I find English class the easier one and the one I'm best in. I was best in Photography class.
      
 
 
