Second Question Answered

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -27,7 +27,7 @@ I attended highschool at Eastside High school and Eagle Rock highschool. Yes I d
 
 ### my answer   
   
-   
+ My computer is an Apple and from a scale from 1-10 I'am a solid 6 on computer knowledge. I indeed have good internet connection where I live.  
 
 ## Others and You?   
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
