Third question answered

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -34,7 +34,7 @@ What name do you prefer to be called by your classmates and instructor, if your 
 
 ### my answer     
   
-   
+ The name I prefer being called in class would my actual name, I do not have any nicknames.  
  
 
 
