Fourth Question Answered

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -45,7 +45,7 @@ What do you want to achieve in life?  What college subject do you think would be
 
 ### my answer     
   
-   
+ What I wanna achieve in life is having a great career path and successfully finishing up college.  My favorite subjects that inerest me are my CFE development classes. I was successfully achieve my bachelors in Family and Child Education.  
  
 
 
