Fifth question answered

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -56,7 +56,7 @@ Have you ever gone to foreign countries, if so which ones, if not Where might yo
 
 ### my answer     
   
-   
+  I have never gone to a foreign country before, if I could go to foreign country in the future I would like to go to China. I have not been in the military before but if I would get drafted I would be a Navy Seal this is because i enjoying being in the water.  
   
 
 
