Sixth question answered.

--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -69,7 +69,7 @@ What grade do you need to attain in stats to not upset your future plans, What i
 
 ### my answer     
   
-   
+ I am currently taking Math 115. I did not know that information about Math 116. I need to attain an C or higher for my future plans. This is one of my last course classes I need to graduate AVC.  
  
 
 
